Added logging, simulation descriptive statistics
