# Dnd.API/Models/Dice/Interfaces/IDiceSimulation.cs
@@ -1,4 +1,6 @@
-﻿namespace Dnd.API.Models.Dice.Interfaces;
+﻿using MathNet.Numerics.Statistics;
+
+namespace Dnd.API.Models.Dice.Interfaces;
 
 public interface IDiceSimulation
 {
@@ -6,9 +8,13 @@ public interface IDiceSimulation
     int Trials { get; set; }
     int? DC { get; set; }
 
+    DescriptiveStatistics Stats { get; set; }
+
     int Modifier { get; set; }
 
-    Dictionary<int, int> Results { get; set; }
+    List<ISimResult> Results { get; set; }
+
+    //Dictionary<int, int> Results { get; set; }
 
     string GetResults();
 }
