# Dnd.API/Models/Dice/Interfaces/IResult.cs
@@ -1,0 +1,7 @@
+﻿namespace Dnd.API.Models.Dice.Interfaces;
+
+public interface ISimResult
+{
+    int Value { get; set; }
+    int Frequency { get; set; }
+}
